src/definitions/collections/table.less
/*!
 * # Semantic UI - Table
 * http://github.com/semantic-org/semantic-ui/
 *
 *
 * Released under the MIT license
 * http://opensource.org/licenses/MIT
 *
 */


/*******************************
            Theme
*******************************/

@type    : 'collection';
@element : 'table';

@import (multiple) '../../theme.config';

/*******************************
             Table
*******************************/

/* Prototype */
.ui.table {
  width: 100%;
  background: @background;
  margin: @margin;
  border: @border;
  box-shadow: @boxShadow;
  border-radius: @borderRadius;
  text-align: @textAlign;
  color: @color;
  border-collapse: @borderCollapse;
  border-spacing: @borderSpacing;
}

.ui.table:first-child {
  margin-top: 0em;
}
.ui.table:last-child {
  margin-bottom: 0em;
}
.ui.table thead,
.ui.table tbody {
  text-align: inherit;
  vertical-align: inherit;
}

/*******************************
             Parts
*******************************/

/* Table Content */
.ui.table th,
.ui.table td {
  transition: @transition;
}

/* Headers */
.ui.table thead {
  box-shadow: @headerBoxShadow;
}
.ui.table thead th {
  cursor: auto;
  background: @headerBackground;
  text-align: @headerAlign;
  color: @headerColor;
  padding: @headerVerticalPadding @headerHorizontalPadding;
  vertical-align: @headerVerticalAlign;
  font-style: @headerFontStyle;
  font-weight: @headerFontWeight;
  text-transform: @headerTextTransform;
  border-bottom: @headerBorder;
  border-left: @headerDivider;
}

.ui.table thead tr > th:first-child {
  border-left: none;
}

.ui.table thead tr:first-child > th:first-child {
  border-radius: @borderRadius 0em 0em 0em;
}
.ui.table thead tr:first-child > th:last-child {
  border-radius: 0em @borderRadius 0em 0em;
}
.ui.table thead tr:first-child > th:only-child {
  border-radius: @borderRadius @borderRadius 0em 0em;
}

/* Footer */
.ui.table tfoot {
  box-shadow: @footerBoxShadow;
}
.ui.table tfoot th {
  cursor: auto;
  border-top: @footerBorder;
  background: @footerBackground;
  text-align: @footerAlign;
  color: @footerColor;
  padding: @footerVerticalPadding @footerHorizontalPadding;
  vertical-align: @footerVerticalAlign;
  font-style: @footerFontStyle;
  font-weight: @footerFontWeight;
  text-transform: @footerTextTransform;
}
.ui.table tfoot tr > th:first-child {
  border-left: none;
}
.ui.table tfoot tr:first-child > th:first-child {
  border-radius: 0em 0em 0em @borderRadius;
}
.ui.table tfoot tr:first-child > th:last-child {
  border-radius: 0em 0em @borderRadius 0em;
}
.ui.table tfoot tr:first-child > th:only-child {
  border-radius: 0em 0em @borderRadius @borderRadius;
}

/* Table Row */
.ui.table tr td {
  border-top: @rowBorder;
}
.ui.table tr:first-child td {
  border-top: none;
}

/* Repeated tbody */
.ui.table tbody + tbody tr:first-child td {
  border-top: @rowBorder;
}

/* Table Cells */
.ui.table td {
  padding: @cellVerticalPadding @cellHorizontalPadding;
  text-align: @cellTextAlign;
}

/* Icons */
.ui.table > .icon {
  vertical-align: @iconVerticalAlign;
}
.ui.table > .icon:only-child {
  margin: 0em;
}

/* Table Segment */
.ui.table.segment {
  padding: 0em;
}
.ui.table.segment:after {
  display: none;
}
.ui.table.segment.stacked:after {
  display: block;
}


/* Responsive */
@media only screen and (max-width : @largestMobileScreen) {
  .ui.table:not(.unstackable) {
    width: 100%;
    padding: 0em;
  }
  .ui.table:not(.unstackable) tbody,
  .ui.table:not(.unstackable) tr,
  .ui.table:not(.unstackable) tr > th,
  .ui.table:not(.unstackable) tr > td  {
    display: block !important;
    width: auto !important;
  }

  .ui.table:not(.unstackable) thead {
    display: @responsiveHeaderDisplay;
  }
  .ui.table:not(.unstackable) tfoot {
    display: @responsiveFooterDisplay;
  }
  .ui.table:not(.unstackable) tr {
    padding-top: @responsiveRowVerticalPadding;
    padding-bottom: @responsiveRowVerticalPadding;
    box-shadow: @responsiveRowBoxShadow;
  }

  .ui.table:not(.unstackable) tr > th,
  .ui.table:not(.unstackable) tr > td {
    background: none;
    border: none !important;
    padding: @responsiveCellVerticalPadding @responsiveCellHorizontalPadding !important;
    box-shadow: @responsiveCellBoxShadow;
  }
  .ui.table:not(.unstackable) th:first-child,
  .ui.table:not(.unstackable) td:first-child {
    font-weight: @responsiveCellHeaderFontWeight;
  }

  /* Definition Table */
  .ui.definition.table:not(.unstackable) thead th:first-child {
    box-shadow: none !important;
  }
}


/*******************************
            Coupling
*******************************/

/* UI Image */
.ui.table th .image,
.ui.table th .image img,
.ui.table td .image,
.ui.table td .image img {
  max-width: none;
}


/*******************************
             Types
*******************************/

/*--------------
    Complex
---------------*/

.ui.structured.table {
  border-collapse: collapse;
}
.ui.structured.table thead th {
  border-left: @headerDivider;
  border-right: @headerDivider;
}
.ui.structured.sortable.table thead th {
  border-left: @sortableBorder;
  border-right: @sortableBorder;
}
.ui.structured.basic.table th {
  border-left: @basicTableHeaderDivider;
  border-right: @basicTableHeaderDivider;
}
.ui.structured.celled.table tr th,
.ui.structured.celled.table tr td {
  border-left: @cellBorder;
  border-right: @cellBorder;
}

/*--------------
   Definition
---------------*/

.ui.definition.table thead:not(.full-width) th:first-child {
  pointer-events: none;
  background: @definitionHeaderBackground;
  font-weight: @definitionHeaderFontWeight;
  color: @definitionHeaderColor;
  box-shadow: -@borderWidth -@borderWidth 0px @borderWidth @definitionPageBackground;
}
/* ... */

